# quadruped-controller

./: CMakeLists.txt  README.md
include/: bno055.hpp  constants.hpp  control_flags.hpp  joint.hpp  kinematics.hpp  leg.hpp  network.hpp  pca9685.hpp  pid.hpp  robot.hpp  server.hpp  stabilizer.hpp
src/: bno055.cpp  joint.cpp  kinematics.cpp  leg.cpp  main.cpp  network.cpp  pca9685.cpp  pid.cpp  robot.cpp  robot_bonus.cpp  server.cpp  stabilizer.cpp
webapp/: controller.html
